Papers and boards ready

--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -332,22 +332,24 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Lightweight</li>
-                                <li>Strong</li>
-                                <li>Easy to cut</li>                                    
+                                <li>Low density</li>
+                                <li>Good printing surface</li>
+                                <li>High stiffness</li>
+                                <li>Easy to work</li>                                    
                                 
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Difficult to bend</li>
+                                <li>Can't withstand medium to heavy loads</li>
+                                <li>Not aesthetically pleasing</li>
                             </ul>                            
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Stiffens/preserves artwork, prints, photographs, watercolour<br><br><br><br></h3>
+                <h3><b>Uses: </b>Frozen/chilled foods, beauty products<br><br><br><br></h3>
 
-                <h3><u><b>Mounting board:</b></u></h3>
+                <h3><u><b>Foil-lined board:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -356,26 +358,22 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Lightweight</li>
-                                <li>Strong</li>
-                                <li>Easy to cut</li>                                    
+                                <li>Keeps food flavour</li>
+                                <li>Keeps food warm</li>
+                                <li>Easy to work</li>
+                                <li>Good barrier against moisture</li>                                     
                                 
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Difficult to bend</li>
+                                <li>Weak</li>
+                                <li>Expensive</li>
                             </ul>                            
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Stiffens/preserves artwork, prints, photographs, watercolour<br><br><br><br></h3>
-
-                <div class="download-page">
-                    <h3>Get a copy of this page:
-                        <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
-                    </h3>
-                </div>
+                <h3><b>Uses: </b>Food packaging, takeaway food, keeping food warm<br><br><br><br></h3>
             </div>
         </div>
 
