Formatting and linking of materials notes + setup links to final 2 notes pages

--- a/notes/notes_topics/materialsnotes.html
+++ b/notes/notes_topics/materialsnotes.html
@@ -116,7 +116,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
+                            <a href="notes_pages\papers_and_boards_materials_notes.html">Paper and Boards</a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">Textiles</a>
+                            <a href="notes_pages\textiles_materials_notes.html">Textiles</a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnotesmartMats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
+                            <a href="notes_pages\smart_materials_notes.html">Smart Materials</a>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
+                            <a href="notes_pages\modern_materials_notes.html">Modern Materials</a>
                         </div>
                     </div>
                 </div>
