--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -74,7 +74,7 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnote2.jpg)" title="metal background">
+            <div class="notes-content-header" style="background-image:url(../../../images/matnote5.jpg)" title="Paper background">
                 <h1 style="color:white"><u><b>Papers & Boards</b></u></h1>
             </div>
 
