--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -74,8 +74,8 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" >
-                <h1><u><b>Polymers</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/portfolio3.jpg)" title="Polymer background">
+                <h1 style="color:white"><u><b>Polymers</b></u></h1>
             </div>
 
             <div class="notes-content">
