Finish performance of characteristics notes

--- a/notes/notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/notes/notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
+                            <a href="notes_pages\performance_characteristics_of_materials_notes.html">Performance Characteristics of Materials</a>
                         </div>
                     </div>
                 </div>
