--- a/notes/notes_topics/notes_pages/smart_materials_notes.html
+++ b/notes/notes_topics/notes_pages/smart_materials_notes.html
@@ -74,7 +74,7 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnotesmartMats.jpg)" title="maths background">
+            <div class="notes-content-header" style="background-image:url(../../../images/matnotesmartMats.jpg)" title="smart materials background">
                 <h1 style="color:white"><u><b>Smart Materials</b></u></h1>
             </div>
 
