remove page intro

--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -80,12 +80,18 @@
 
             <div class="notes-content">
 
-                <div class="notes-content-intro">
+                <!-- <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
                         <li>Conductivity</li>
+                        <li>Strength</li>
+                        <li>Conductivity</li>
+                        <li>Conductivity</li>
+                        <li>Conductivity</li>
+                        <li>Conductivity</li>
+                        <li>Conductivity</li>
                     </ul>
-                </div>
+                </div> -->
 
                 <h3><b><u>Conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">electrical current flow</b> through a material<br><br><br></h3>
