--- a/notes/notes_topics/notes_pages/smart_materials_notes.html
+++ b/notes/notes_topics/notes_pages/smart_materials_notes.html
@@ -183,7 +183,7 @@
                             <ul>
                                 <li>Safe/does not run hot</li>
                                 <li>Responds to stimuli (alternating current)</li>
-                                <li>Copact/flexible/adjustable</li>
+                                <li>Compact/flexible/adjustable</li>
                                 
                             </ul>
                         </td>
@@ -324,7 +324,7 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Airbag sensors, musical greeting cards, pressure sensors</h3>
+                <h3><b>Uses: </b>Airbag sensors, musical greeting cards, pressure sensors<br><br></h3>
         </div>
 
         <div class="footer">
