Start processes techniques and tools - alloying - finished

--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -79,7 +79,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_alloy.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Alloying</a>
+                            <a href="notes_pages\alloying_notes.html">Alloying</a>
                         </div>
                     </div>
                 </div>
