fix laminate picture

--- a/notes/notes_topics/notes_pages/lamination_notes.html
+++ b/notes/notes_topics/notes_pages/lamination_notes.html
@@ -84,7 +84,7 @@
 
                 <h3><b><u>Lamination:</b></u></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/Lamination_note_photo.png" alt="Diagram of shape dimensions">
+                    <img src="../../../images/notes_pages_images/Lamination_note_photo.jpg" alt="Diagram of shape dimensions">
                 </div>
                 <h3>Bonding layers of wood together for complex shapes or added strength
                     <p><b>How it works:</b></p>
