--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -215,22 +215,51 @@
                             <ul>
                                 <li>Low cost</li>
                                 <li>Quick and simple</li>
-                                <li></li>
-                                <li>Any metal can be cast</li>
-                                <li>No parting lines from mould</li>
+                                <li>Accurate</li>
+                                <li>Quick setting</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Only small castings can be made</li>
-                                <li>Expensive</li>
-                                <li>Labour intensive</li>
-                                <li>Time consuming to create wax mould - slow production rate</li>
+                                <li>Toxic fumes can be released</li>
+                                <li>Can be expensive to get moulds</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Turbine blades, gears, machine parts<br><br></h3>
+                <h3><b>Uses: </b>Collectible toys, models, figures, smallscale jewellery<br><br></h3>
+
+                <h3><b><u>Plaster of Paris casting (gypsum):</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>Mix the formula with watere</li>
+                        <li>Poor into mould</li>
+                        <li>Allow to set</li></ol>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Low cost</li>
+                                <li>Easy/simple</li>
+                                <li>Durable</li>
+                                <li>Smooth bubble free finish</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Long set time</li>
+                                <li>Irritant to skin</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Bone casts, sculpturing<br><br></h3>
             </div>
         </div>
 
