--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -233,7 +233,7 @@
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Mix the formula with watere</li>
+                        <ol><li>Mix the formula with water</li>
                         <li>Poor into mould</li>
                         <li>Allow to set</li></ol>
                     </ul></h3>
