Heat treatments done

--- a/notes/notes_topics/heat_treatments_notes.html
+++ b/notes/notes_topics/heat_treatments_notes.html
@@ -93,7 +93,7 @@
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Medium/High carbon steel is heated to a given temperature (below critical temperature) and held their for a period of time</li>
+                        <ol><li>Medium/High carbon steel is heated to a given temperature (below critical temperature) and held there for a period of time</li>
                         <li>It is then dropped in water/oil (ofetn called quenching)</li>
                         <li>The metal has now been hardened which improves certain properties but makes the metal very brittle</li>
                         <li>As a result the metal is reheated to a given temperature (below critical temperature) and allowed to cool slowly</li>
@@ -161,7 +161,7 @@
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol>Metal is heated and then very slowly cooled<li></li>
-                        <li>While similar to tempering it produces a softer and more ductile metal that can be used for products that will not undergo large stresses</li>
+                        <li>While similar to tempering it produces a softer and more ductile metal that can be used for products that will not undergo large stresses</ol></li>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -183,15 +183,14 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Taps, model cars<br><br></h3>
+                <h3><b>Uses: </b>Reduce hardness and increase ductility in metals such as steels<br><br></h3>
 
-                <h3><b><u>Resin casting:</b></u></h3>
+                <h3><b><u>Normalising:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Mould made of desired shape</li>
-                        <li>Liquid synthetic resin poured into mould</li>
-                        <li>Resin hardens and the mould is removed</li></ol>
+                        <ol><li>Metal is heated to the critical temperature and held there for a set time</li>
+                        <li>Metal is then allowed to cool slowly in air</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -201,53 +200,21 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Low cost</li>
-                                <li>Quick and simple</li>
-                                <li>Accurate</li>
-                                <li>Quick setting</li>
+                                <li>Metal becomes easier to machine</li>
+                                <li>Relieves internal stress on metal</li>
+                                <li>Decreased hardness</li>
+                                <li>Improved ductility</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Toxic fumes can be released</li>
-                                <li>Can be expensive to get moulds</li>
+                                <li>Can't normalise non-ferous metals</li>
+                                <li>Decrease in hardness</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Collectible toys, models, figures, smallscale jewellery<br><br></h3>
-
-                <h3><b><u>Plaster of Paris casting (gypsum):</b></u></h3>
-                <h3>
-                    <p><b>How it works:</b></p>
-                    <ul>
-                        <ol><li>Mix the formula with water</li>
-                        <li>Poor into mould</li>
-                        <li>Allow to set</li></ol>
-                    </ul></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Low cost</li>
-                                <li>Easy/simple</li>
-                                <li>Durable</li>
-                                <li>Smooth bubble free finish</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Long set time</li>
-                                <li>Irritant to skin</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>Bone casts, sculpturing<br><br></h3>
+                <h3><b>Uses: </b>To relieve stress on metal after cold working process for better physcial properties<br><br></h3>
             </div>
         </div>
 
