--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -88,7 +88,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_casting.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Casting.pdf">Casting</a>
+                            <a href="notes_pages\casting_notes.html">Casting</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_heattreatment.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_HeatTreatments.pdf">Heat Treatments</a>
+                            <a href="notes_pages\heat_treatments_notes.html">Heat Treatments</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_lamination.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Lamination.pdf">Lamination</a>
+                            <a href="notes_pages\lamination_notes.html">Lamination</a>
                         </div>
                     </div>
                 </div>
