--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -74,8 +74,8 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_alloy.jpg)" title="alloy background">
-                <h1 style="color:white"><u><b>Alloying</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_casting.jpg)" title="casting background">
+                <h1 style="color:white"><u><b>Casting</b></u></h1>
             </div>
 
             <div class="notes-content">
