--- a/notes/notes_topics/notes_pages/heat_treatments_notes.html
+++ b/notes/notes_topics/notes_pages/heat_treatments_notes.html
@@ -75,7 +75,7 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
-                <h1 style="color:white"><u><b>Heat treatment</b></u></h1>
+                <h1 style="color:white"><u><b>Heat treatments</b></u></h1>
             </div>
 
             <div class="notes-content">
@@ -160,8 +160,8 @@
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol>Metal is heated and then very slowly cooled<li></li>
-                        <li>While similar to tempering it produces a softer and more ductile metal that can be used for products that will not undergo large stresses</ol></li>
+                        <ol><li>Metal is heated and then very slowly cooled</li>
+                        <li>While similar to tempering it produces a softer and more ductile metal that can be used for products that will not undergo large stresses</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
