--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -74,26 +74,26 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
-                <h1 style="color:white"><u><b>Heat treatment</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_printing.jpg)" title="printing background">
+                <h1 style="color:white"><u><b>Printing</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
-                        <li>Hardening and tempering</li>
-                        <li>Case hardening</li>
-                        <li>Annealing</li>
-                        <li>Normalising</li>
+                        <li>Offset lithography</li>
+                        <li>Flexography</li>
+                        <li>Screen printing</li>
+                        <li>Gravure printing</li>
                     </ul>
                 </div>
 
-                <h3><b><u>Hardening and tempering:</b></u></h3>
+                <h3><b><u>Offset lithography:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Medium/High carbon steel is heated to a given temperature (below critical temperature) and held there for a period of time</li>
+                        <ol><li>Digital files </li>
                         <li>It is then dropped in water/oil (ofetn called quenching)</li>
                         <li>The metal has now been hardened which improves certain properties but makes the metal very brittle</li>
                         <li>As a result the metal is reheated to a given temperature (below critical temperature) and allowed to cool slowly</li>
