--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -93,10 +93,12 @@
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Digital files </li>
-                        <li>It is then dropped in water/oil (ofetn called quenching)</li>
-                        <li>The metal has now been hardened which improves certain properties but makes the metal very brittle</li>
-                        <li>As a result the metal is reheated to a given temperature (below critical temperature) and allowed to cool slowly</li>
+                        <ol><li>Digital files are broken down by colour separation</li>
+                        <li>The image is etched onto an aluminium plate for each colour, through a laser</li>
+                        <li>Each image plate is then loaded onto a plate cylinder</li>
+                        <li>The plate cylinder will dampen the non-image area of each file with water</li>
+                        <li>A vegetable oil-based paint solution will then be added successively to the plate to imprint the colour</li>
+                        <li>The plate cylinder will transfer the colour to another cylinder which is equipped with a rubber blanket that will print it directly onto the paper</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -106,30 +108,31 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Improved tensile strength </li>
-                                <li>Very hard </li>
-                                <li>Reversible process (via annealing)</li>
+                                <li>High image quality</li>
+                                <li>Suited to higher volume print runs of 1000 runs or more</li>
+                                <li>Quick/easy production of printing plates</li>
+                                <li>Printing plates last a long time</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Metal becomes less ductile</li>
-                                <li>Metal is more likely to crack/damage in worked area</li>
-                                <li>Metal becomes more brittle</li>
+                                <li>Expensive set-up costs</li>
+                                <li>High running costs for small quantities</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Screwdrivers, wrenches, hardened steel<br><br></h3>
+                <h3><b>Uses: </b>Books, business forms, magazines, posters<br><br></h3>
 
-                <h3><b><u>Case hardening:</b></u></h3>
+                <h3><b><u>Flexography:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Hardens the surface of steels with less than 0.4% carbon content</li>
-                        <li>Carburising: the metal is placed in a box packed with powdered carbon and heat to 930C for a period of time</li>
-                        <li>Carbon is then absorbed by the metal, the depth of absoprtion is determined by the length of time if carbursing </li>
-                        <li>The metal is then quenched in water which stops the carbon escaping the surface of the metal</li>
+                        <ol><li>The plates are normally made of plastic, polymer or rubber</li>
+                        <li>The plates have a raised surface image and are fixed or mounted onto printing cylinders</li>
+                        <li>Ink is applied through the fountain cylinder and anilox cylinder</li>
+                        <li>Applied ink can be evened out and cleaned using a doctor blade</li>
+                        <li>Each colour uses a different printing plate</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -139,29 +142,34 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Greater hardness for outside surface</li>
-                                <li>Improved wear resistance</li>
-                                <li>Resistance to surface indedntations</li>
-                                <li>Low coefficient of friction</li>
-                                <li>Internal properties of metal remain unchanged</li>
+                                <li>High print speed</li>
+                                <li>Ideally suited for long runs</li>
+                                <li>Prints on a wide variety of substrate materials</li>
+                                <li>Low cost of equipment and consumables</li>
+                                <li>Low maintenance</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Depth of hardness is not fully known</li>
-                                <li>Difficult to machine metal after process</li>
+                                <li>Printing plates are expensive</li>
+                                <li>Time consuming to change print content</li>
+                                <li>Waste material can be high</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Firing pins in guns, rifle bolts, engine camshafts<br><br></h3>
+                <h3><b>Uses: </b>Newspapers, comics, cartons, carrier bags<br><br></h3>
 
-                <h3><b><u>Annealing:</b></u></h3>
+                <h3><b><u>Screen printing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol>Metal is heated and then very slowly cooled<li></li>
-                        <li>While similar to tempering it produces a softer and more ductile metal that can be used for products that will not undergo large stresses</ol></li>
+                        <ol><li>A mesh screen stencil is created</li>
+                        <li>To create multi-coloured products, the printer must make multiple stencils for each colour</li>
+                        <li>The screen is then placed on the printing press</li>
+                        <li>The item or garment being printed is laid down flat onto the printing board, underneath the screen</li>
+                        <li>Ink is added to the top side of the screen, and a squeegee is used to pull the ink along the full length of the screen</li>
+                        <li>The printed product then passes through a dryer, which 'cures' the ink and creates a smooth, colourfast finish</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -171,26 +179,33 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Metal becomes less brittle</li>
-                                <li>Metal becomes more ductile</li>
-                                <li>Simple process that can be done in school workshops</li>
+                                <li>Low set up cost</li>
+                                <li>Can print onto a range of different surfaces</li>
+                                <li>Screens are rapidly made using emulsion so efficient for small production runs</li>
+                                <li>Screens are reusable so can be used for later batch runs</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Slow and time consuming process</li>
+                                <li>Slow process</li>
+                                <li>High cost per prodcut</li>
+                                <li>A different screen is required for each colour</li>
+                                <li>Colours can become inconsistent after many runs which leads to low qualitiy print</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Reduce hardness and increase ductility in metals such as steels<br><br></h3>
+                <h3><b>Uses: </b>Posters, display boards, textile T-shirts<br><br></h3>
 
-                <h3><b><u>Normalising:</b></u></h3>
+                <h3><b><u>Gravure printing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>Metal is heated to the critical temperature and held there for a set time</li>
-                        <li>Metal is then allowed to cool slowly in air</li></ol>
+                        <ol><li>The printing cylinder rotates in the ink pan where the engraved cells fill with ink</li>
+                        <li>As the cylinder rotates, excess ink is removed by the doctor blade</li>
+                        <li>The cylinder is brought into contact with the substrate, which is pressed against it by the rubber covered impression cylinder</li>
+                        <li>This results in the direct ink transfer of ink from the cells in the printing cylinder to the surface of the substrate</li>
+                        <li>As the printing roller rotates back into the ink pan, the printed area of the subsrate proceeds through a dryer and onto the next printing unit</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -200,21 +215,21 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Metal becomes easier to machine</li>
-                                <li>Relieves internal stress on metal</li>
-                                <li>Decreased hardness</li>
-                                <li>Improved ductility</li>
+                                <li>Quick print times</li>
+                                <li>Gravure cylinders are extremely durable (long print runs)</li>
+                                <li>Consistent quality finish</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Can't normalise non-ferous metals</li>
-                                <li>Decrease in hardness</li>
+                                <li>Only viable for long runs due to cost of engraving cylinders</li>
+                                <li>Expensive set up cost</li>
+                                <li>Longer lead times than offset lithography</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>To relieve stress on metal after cold working process for better physcial properties<br><br></h3>
+                <h3><b>Uses: </b>Wallpaper, gift wrapping<br><br></h3>
             </div>
         </div>
 
