--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -162,6 +162,9 @@
 
                 <h3><b><u>Screen printing:</b></u></h3>
                 <h3>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/screenprinting.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>A mesh screen stencil is created</li>
