--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -91,6 +91,9 @@
 
                 <h3><b><u>Offset lithography:</b></u></h3>
                 <h3>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/offsetlithography.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Digital files are broken down by colour separation</li>
@@ -126,6 +129,9 @@
 
                 <h3><b><u>Flexography:</b></u></h3>
                 <h3>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/flexography.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The plates are normally made of plastic, polymer or rubber</li>
@@ -202,6 +208,9 @@
 
                 <h3><b><u>Gravure printing:</b></u></h3>
                 <h3>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/gravure.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The printing cylinder rotates in the ink pan where the engraved cells fill with ink</li>
