--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -151,7 +151,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_out.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_MarkingOutTechniques.pdf">Marking Out Techniques</a>
+                            <a href="notes_pages\marking_out_techniques_notes.html">Marking Out Techniques</a>
                         </div>
                     </div>
                 </div>
