--- a/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
@@ -91,6 +91,9 @@
                         <li>Pencil (centre of circle)</li>
                         <li>Template and pencil (irregular shapes)</li>
                     </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>Metals:</b></u></h3>
                 <h3><ul>
@@ -101,6 +104,9 @@
                         <li>Centre punch (centre of circle)</li>
                         <li>Template and sciber (irregular shapes)</li>
                     </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>Polymers:</b></u></h3>
                 <h3><ul>
@@ -111,6 +117,9 @@
                         <li>Spirit pen (centre of circle)</li>
                         <li>Template and spirit pen (irregular shapes)</li>
                     </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>Papers:</b></u></h3>
                 <h3><ul>
@@ -121,6 +130,9 @@
                         <li>Pencil (centre of circle)</li>
                         <li>Template and pencil (irregular shapes)</li>
                     </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>Boards:</b></u></h3>
                 <h3><ul>
@@ -131,6 +143,9 @@
                     <li>Pencil (centre of circle)</li>
                     <li>Template and pencil (irregular shapes)</li>
                     </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
                 </div>
             </div>
         </div>
