--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -178,7 +178,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_marking_tools.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_SpecialistMarkingTools.pdf">Specialist Marking Tools</a>
+                            <a href="notes_pages\specialist_markingtools_notes.html">Specialist Marking Tools</a>
                         </div>
                     </div>
                 </div>
