--- a/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/userCentreDesign.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_UserCentredDesign.pdf">User Centred Design</a>
+                            <a href="notes_pages\user_centred_design_notes.html">User Centred Design</a>
                         </div>
                     </div>
                 </div>
