--- a/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/ergonomics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_Anthropometrics_Ergonomics.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
+                            <a href="notes_pages\Influence_of_design_anthropometrics_notes.html">Influence on Design of Anthropometrics and Ergonomics</a>
                         </div>
                     </div>
                 </div>
