--- a/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
+++ b/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
@@ -74,8 +74,8 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_marking_out.jpg)" title="alloy background">
-                <h1 style="color:white"><u><b>Influence om design of anthropometrics and ergonomics</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/ergonomics.jpg)" title="alloy background">
+                <h1 style="color:white"><u><b>Influence on design of anthropometrics and ergonomics</b></u></h1>
             </div>
 
             <div class="notes-content">
@@ -103,7 +103,9 @@
                         <li>Improves peoples lives by increasing their comfort and satisfaction</li>
                         <li>Data about the size and shape of the human body is required (anthropometrics)</li>
                     </ul></h3>
-                    <h3>A <b><u>quantitative</u></b> (measurable) approach</u></h3>
+                    <h3>A <b><u>quantitative</u></b> (measurable) approach predicts the physical fit of the product to the human body shape, encompassing workload, speed of performance and errors</u></h3>
+                    <h3>A <b><u>qualitative</u></b> (opinion based) approach predicts user comfort and their satisfaction with the product, so it has the optimum interaction with the user</u></h3>
+                    <h3><b>Uses:</b> Ergonomic handles, chairs, computer desk heights</u></h3>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
