--- a/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/aesthetics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_Aesthetics.pdf">Influence of Aesthetics</a>
+                            <a href="notes_pages\influence_of_aesthetics_notes.html">Influence of Aesthetics</a>
                         </div>
                     </div>
                 </div>
