suspend showing 'download page as pdf'

--- a/notes/notes_topics/notes_pages/alloying_notes.html
+++ b/notes/notes_topics/notes_pages/alloying_notes.html
@@ -120,11 +120,11 @@
                 </table>
 
                 
-                <div class="download-page">
+                <!-- <div class="download-page">
                     <h3>Get a copy of this page:
                         <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Process, Techniques & Specialist Tools - Alloying</a>
                     </h3>
-                </div>
+                </div> -->
             </div>
         </div>
 
