--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -153,11 +153,11 @@
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <div class="download-page">
+                <!-- <div class="download-page">
                     <h3>Get a copy of this page:
                         <a href="..\..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
                     </h3>
-                </div>
+                </div> -->
             </div>
         </div>
 
