--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -444,11 +444,11 @@
                 </table>
                 <h3><b>Uses: </b>Shelving, furniture, Wall panels<br><br><br><br></h3>
 
-                <div class="download-page">
+                <!-- <div class="download-page">
                     <h3>Get a copy of this page:
                         <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
                     </h3>
-                </div>
+                </div> -->
             </div>
         </div>
 
