done modelling costing of projects

--- a/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/modelCost.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_ModellingTheCostingOfProjectsToAchieveOptimumOutcome.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
+                            <a href="notes_pages\modelling_the_costing_of_projects_notes.html">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
                         </div>
                     </div>
                 </div>
