--- a/notes/notes_topics/DigitalTechnologies.html
+++ b/notes/notes_topics/DigitalTechnologies.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/Digital_Tech/DigiTech_note_CAD.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedDesign.pdf">Computer Aided Design</a>
+                            <a href="notes_pages\CAD_notes.html">Computer Aided Design</a>
                         </div>
                     </div>
                 </div>
