standards for products notes done

--- a/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
+                            <a href="notes_pages\modelling_the_costing_of_projects_notes.html">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/propertyrights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
+                            <a href="notes_pages\modelling_the_costing_of_projects_notes.html">Property Rights</a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/standardsForProducts.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\11. Information handling, modelling and forward planning\DTBase_StandardsForProducts.pdf">Standards for Products</a>
+                            <a href="notes_pages\standard_for_products_notes.html">Standards for Products</a>
                         </div>
                     </div>
                 </div>
