--- a/notes/notes_topics/DigitalTechnologies.html
+++ b/notes/notes_topics/DigitalTechnologies.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/Digital_Tech/DigiTech_note_CAM.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedManufacturing_RapidPrototyping.pdf">Computer Aided Manufacturing and Rapid Prototyping</a>
+                            <a href=notes_pages\CAM_notes.html">Computer Aided Manufacturing and Rapid Prototyping</a>
                         </div>
                     </div>
                 </div>
